fix: topnav bar and product navbar z-index

--- a/src/pages/assets/css/ImageButton.css
+++ b/src/pages/assets/css/ImageButton.css
@@ -121,8 +121,8 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: 100;
-  width: 100%;
+  z-index: 1;
+  width: inherit;
 }
 
 .landing-nav-txt {
